03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/VS_Service__c.object-meta.xml
<CustomObject>
    <description>F-001 slot-booking-core (VS-01, EP-01). Generic service catalogue (vaccination in F-001; a service-type field keeps OPD additive later per D-012 — build nothing OPD-specific). OWD Public Read Only (design §2.2). Retention class (Annexure C4): permanent reference — never purged by VS_RetentionPurgeBatch.</description>
    <label>VS Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VS Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>