03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_Dose_Count__c.field-meta.xml
<CustomField>
    <fullName>VS_Dose_Count__c</fullName>
    <description>Number of doses this vaccination service requires (e.g. 2 for a two-dose course). Reserved as the enabling seam for the deferred next-dose recall feature; not consumed by any F-001 automation.</description>
    <label>Dose Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>