03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_External_Id__c</fullName>
    <description>External system key reserved for a future CoWIN/U-WIN integration seam (OQ-016); not populated in F-001. Marked External ID + Unique so a later integration upserts without duplicating services.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>