03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>VS_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the service is excluded from citizen discovery search results and new facility-service offerings, without deleting historical bookings that reference it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>