03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>VS_Service_Type__c</fullName>
    <description>Keeps the Service catalogue generic so OPD is additive later without a redesign (D-012). F-001 uses Vaccination only; no OPD-specific behavior is built in this ticket.</description>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vaccination</fullName>
                <default>true</default>
                <label>Vaccination</label>
            </value>
            <value>
                <fullName>OPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>