03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_Slot_Granularity_Mins__c.field-meta.xml
<CustomField>
    <fullName>VS_Slot_Granularity_Mins__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Per-service slot length in minutes used by VS-06 slot generation (D-008). Default 15 mirrors VS_Setting__mdt.DefaultSlotGranularityMins (VS-02); this per-service value lets a service override the org-wide default without a code change.</description>
    <label>Slot Granularity (Mins)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>