03-qa/evidence/run-B/tc009-retrieve/objects/VS_Service__c/fields/VS_Vaccine_Name__c.field-meta.xml
<CustomField>
    <fullName>VS_Vaccine_Name__c</fullName>
    <description>Name of the vaccine this service dispenses (e.g. Covishield, Covaxin). Blank/not meaningful for a future non-vaccination (OPD) service type (D-012).</description>
    <label>Vaccine Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>